Document Tomcat security configuration steps
Added detailed steps for configuring security in Tomcat, including role definitions, access restrictions, HTTPS setup, and Security Manager activation.